add enemy waves| game text| sprite animation & timing

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
 
  <canvas id="canvas1"></canvas>
+ <img src="./images/beetlemorph.png" id="beetlemorph">
+ <img src="./images/player.png" id="player">
+ <img src="./images/player_jets.png" alt="" id="player_jets">
  <script src="script.js"></script>
 </body>
 </html>
