add armored enemy

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
  <canvas id="canvas1"></canvas>
  <img src="./images/beetlemorph.png" id="beetlemorph">
+ <img src="./images/rhinomorph.png" id="rhinomorph" alt="">
  <img src="./images/player.png" id="player">
  <img src="./images/player_jets.png" alt="" id="player_jets">
  <script src="script.js"></script>
