--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
  <img src="./images/rhinomorph.png" id="rhinomorph" alt="">
  <img src="./images/player.png" id="player">
  <img src="./images/player_jets.png" alt="" id="player_jets">
+ <img src="./images/boss.png" alt="" id="boss">
  <script src="script.js"></script>
 </body>
 </html>
